feat: strengthen process APIs and expose diagram resources